--- a/src/projetIHM/gestionMairieBundle/Resources/views/Habite/ajouterHabite.html.twig
+++ b/src/projetIHM/gestionMairieBundle/Resources/views/Habite/ajouterHabite.html.twig
@@ -3,7 +3,7 @@
 
 {% extends 'projetIHMgestionMairieBundle::base.html.twig' %}
 
-{% block title%}Ajouter un emménagement{% endblock%}
+{% block title%}{{'Ajouter un emménagement'|trans}}{% endblock%}
 
 {% block body%}
 
@@ -30,16 +30,9 @@
       <div class="well">
 	<form method="post" {{ form_enctype(form) }}>
 	  {{ form_widget(form) }}
-	  <input type="submit" class="btn btn-primary" />
+	  <input type="submit" value="{{'Valider'|trans}}"class="btn btn-primary" />
 	</form>
       </div>
     </div>
   </div>
-
-  <hr>
-
-  <footer>
-    <p>Univ'Nantes © 2014.</p>
-  </footer>
-</div>
 {% endblock %}
