--- a/src/projetIHM/gestionMairieBundle/Resources/views/Habite/habite.html.twig
+++ b/src/projetIHM/gestionMairieBundle/Resources/views/Habite/habite.html.twig
@@ -2,7 +2,7 @@
 
 {% extends 'projetIHMgestionMairieBundle::base.html.twig' %}
 
-{% block title%}Gérer les déménagements{% endblock%}
+{% block title%}{{'Gérer les déménagements'|trans}}{% endblock%}
 
 {% block body%}
 
@@ -38,12 +38,5 @@
       {% endfor %}
     </div>
   </div>
-
-  <hr>
-
-  <footer>
-    <p>Univ'Nantes © 2014.</p>
-  </footer>
-</div>
 
 {% endblock %}
