--- a/src/projetIHM/gestionMairieBundle/Resources/views/Logement/ajouterLogement.html.twig
+++ b/src/projetIHM/gestionMairieBundle/Resources/views/Logement/ajouterLogement.html.twig
@@ -3,7 +3,8 @@
 
 {% extends 'projetIHMgestionMairieBundle::base.html.twig' %}
 
-{% block title%}Ajouter un logement{% endblock%}
+{% block title%}{{'Ajouter un logement'|trans}}
+{% endblock%}
 
 {% block body%}
 
@@ -37,11 +38,4 @@
       
     </div>
   </div>
-
-  <hr>
-
-  <footer>
-    <p>Univ'Nantes © 2014.</p>
-  </footer>
-</div>
 {% endblock %}
