--- a/src/projetIHM/gestionMairieBundle/Resources/views/Logement/logement.html.twig
+++ b/src/projetIHM/gestionMairieBundle/Resources/views/Logement/logement.html.twig
@@ -2,7 +2,7 @@
 
 {% extends 'projetIHMgestionMairieBundle::base.html.twig' %}
 
-{% block title%}Gérer les logements{% endblock%}
+{% block title%}{{'Gérer les logements'|trans}}{% endblock%}
 
 {% block body%}
 <div class="container">
@@ -40,11 +40,4 @@
 
     </div>
   </div>
-
-  <hr>
-
-  <footer>
-    <p>Univ'Nantes © 2014.</p>
-  </footer>
-</div>
 {% endblock %}
