--- a/src/projetIHM/gestionMairieBundle/Resources/views/Personne/ajouterPersonne.html.twig
+++ b/src/projetIHM/gestionMairieBundle/Resources/views/Personne/ajouterPersonne.html.twig
@@ -3,21 +3,21 @@
 
 {% extends 'projetIHMgestionMairieBundle::base.html.twig' %}
 
-{% block title%}Ajouter des personnes{% endblock%}
+{% block title%}{{'Ajouter des personnes'|trans}}{% endblock%}
 
 {% block body%}
     <div class="container">
       <div id="header" class="hero-unit">
-        <h1>Ajouter une personne</h1>
-        <p>Déstiné aux mairie afin de gerer les personnes.</p>
+        <h1>{{'Ajouter une personne'|trans}}</h1>
+        <p>{{'Déstiné aux mairie afin de gerer les personnes'|trans}}.</p>
       </div>
 
       <div class="row">
         <div id="menu" class="span3">
-          <h3>Accueil</h3>
+          <h3>{{'Accueil'|trans}}</h3>
           <ul class="nav nav-pills nav-stacked">
-            <li><a href="{{path('gestion_mairie_homepage')}}">Accueil du Site</a></li>
-            <li><a href="{{path('gestion_mairie_personne')}}">Gerer les personnes</a></li>
+            <li><a href="{{path('gestion_mairie_homepage')}}">{{'Accueil du Site'|trans}}</a></li>
+            <li><a href="{{path('gestion_mairie_personne')}}">{{'Gerer les personnes'|trans}}</a></li>
           </ul>
           
           
@@ -25,7 +25,7 @@
       
 	<div id="content" class="span8">
 
-	  <h3>Formulaire d'une personne</h3>
+	  <h3>{{"Formulaire d'une personne"|trans}}</h3>
 	  <div class="well">
 	    <form method="post" {{ form_enctype(form) }}>
 	      {{ form_widget(form) }}
@@ -36,10 +36,4 @@
         </div>
       </div>
 
-      <hr>
-
-      <footer>
-        <p>Univ'Nantes © 2014.</p>
-      </footer>
-    </div>
  {% endblock %}
