>>> 2.0 <<< _Système de connexion : done

--- a/src/projetIHM/gestionMairieBundle/Resources/views/Accueil/index.html.twig
+++ b/src/projetIHM/gestionMairieBundle/Resources/views/Accueil/index.html.twig
@@ -21,7 +21,7 @@
 	<li><a href="{{path('gestion_mairie_logement')}}">{{'Gérer les logements'|trans}}</a></li>
 	<li><a href="{{path('gestion_mairie_habite')}}">{{'Gérer les em(dé)ménagements'|trans}}</a></li>
       </ul>
-      
+      <a href="{{path('logout')}}" class="btn btn-danger">{{'Déconnexion'|trans}}</a></br>
       
     </div>
     
