--- a/src/projetIHM/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/projetIHM/UserBundle/Resources/views/Security/login.html.twig
@@ -2,6 +2,7 @@
 
 {% extends "projetIHMgestionMairieBundle::base.html.twig" %}
 
+{% block title %}{{"Gestion de l'état civil"|trans}}{% endblock %}
 {% block body %}
 <div class="container">
   <div id="header" class="hero-unit">
