--- a/src/projetIHM/gestionMairieBundle/Resources/views/Logement/modifierLogement.html.twig
+++ b/src/projetIHM/gestionMairieBundle/Resources/views/Logement/modifierLogement.html.twig
@@ -4,6 +4,8 @@
 
 {% block title%}{{'Modifier un logement'|trans}}
 {% endblock%}
+{% block css %}<link rel="stylesheet" href="{{ asset('bundles/projetihmgestionmairie/css/' ~ app.session.get('theme') ) }}" type="text/css" />
+{% endblock %}
 
 {% block body%}
 
