--- a/src/projetIHM/gestionMairieBundle/Resources/views/Habite/habite.html.twig
+++ b/src/projetIHM/gestionMairieBundle/Resources/views/Habite/habite.html.twig
@@ -3,6 +3,8 @@
 {% extends 'projetIHMgestionMairieBundle::base.html.twig' %}
 
 {% block title%}{{'Gérer les déménagements'|trans}}{% endblock%}
+{% block css %}<link rel="stylesheet" href="{{ asset('bundles/projetihmgestionmairie/css/' ~ app.session.get('theme') ) }}" type="text/css" />
+{% endblock %}
 
 {% block body%}
 
