--- a/src/projetIHM/gestionMairieBundle/Resources/views/Habite/modifierLogement.html.twig
+++ b/src/projetIHM/gestionMairieBundle/Resources/views/Habite/modifierLogement.html.twig
@@ -3,6 +3,8 @@
 {% extends 'projetIHMgestionMairieBundle::base.html.twig' %}
 
 {% block title%}Modifier une foyer{% endblock%}
+{% block css %}<link rel="stylesheet" href="{{ asset('bundles/projetihmgestionmairie/css/' ~ app.session.get('theme') ) }}" type="text/css" />
+{% endblock %}
 
 {% block body%}
     <div class="container">
