remove Acme :: add FOSUserBundler work :: clean twig

--- a/src/projetIHM/gestionMairieBundle/Resources/views/Accueil/index.html.twig
+++ b/src/projetIHM/gestionMairieBundle/Resources/views/Accueil/index.html.twig
@@ -3,36 +3,18 @@
 {% extends 'projetIHMgestionMairieBundle::base.html.twig' %}
 
 {% block title%}{{"Gestion de l'état civil"|trans}}{% endblock%}
-{% block css %}<link rel="stylesheet" href="{{ asset('bundles/projetihmgestionmairie/css/' ~ app.session.get('theme') ) }}" type="text/css" />
-{% endblock %}
 
+{% block css %}<link rel="stylesheet" href="{{ asset('bundles/projetihmgestionmairie/css/' ~ app.session.get('theme') ) }}" type="text/css" />{% endblock %}
+
+{% block header %}
+
+    <h1>{{"Gestion de l'état civil"|trans}}</h1>
+    <p>{{'Déstiné aux mairie afin de gerer les personnes.'|trans}}</p>
+
+{% endblock %}
 
 {% block body %}
 
+        lala
 
-<div class="container">
-  <div id="header" class="hero-unit">
-    <h1>{{"Gestion de l'état civil"|trans}}</h1>
-    <p>{{'Déstiné aux mairie afin de gerer les personnes.'|trans}}</p>
-  </div>
-
-  <div class="row">
-    <div id="menu" class="span3">
-      <h3>{{'Accueil'|trans}}</h3>
-
-      <ul class="nav nav-pills nav-stacked">
-        <li><a href="{{path('gestion_mairie_homepage')}}">{{'Accueil du Site'|trans}}</a></li>
-        <li><a href="{{path('gestion_mairie_personne')}}">{{'Gerer les personnes'|trans}}</a></li>
-	<li><a href="{{path('gestion_mairie_mariage')}}">{{'Gérer les mariages'|trans}}</a></li>
-	<li><a href="{{path('gestion_mairie_logement')}}">{{'Gérer les logements'|trans}}</a></li>
-	<li><a href="{{path('gestion_mairie_habite')}}">{{'Gérer les em(dé)ménagements'|trans}}</a></li>
-      </ul>
-      
-    </div>
-    
-    <div id="content" class="span8">
-    </div>
-  </div>
-
-
-  {% endblock %}
+{% endblock %}
