--- a/src/projetIHM/gestionMairieBundle/Resources/views/base.html.twig
+++ b/src/projetIHM/gestionMairieBundle/Resources/views/base.html.twig
@@ -1,37 +1,52 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
+  <link rel="stylesheet" href="{{ asset('bundles/projetihmgestionmairie/css/bootstrap/css/bootstrap.css') }}" type="text/css" />
 
-    <link rel="stylesheet" href="{{ asset('bundles/projetihmgestionmairie/css/bootstrap/css/bootstrap.css') }}" type="text/css" />
-    {% block css %}{% endblock %}
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>{% block title %}Test Application{% endblock %}</title>
-  </head>
+  {% block css %}{% endblock %}
 
-
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <title>{% block title %}Test Application{% endblock %}</title>
+</head>
 <body>
+  <div class="container">
+    <div id="header" class="hero-unit">
 
-{% block body %}
+      {% block header %}
 
+      {% endblock %}
 
-{% endblock %}
-
-
-
-      <hr>
-      <footer>
-	<div id="menu" style="text-align:center;">
-	<a href="{{ path(app.request.get('_route'), app.request.get('_route_params')|merge({'_locale': 'fr'})) }}">FR</a>
-<a href="{{ path(app.request.get('_route'), app.request.get('_route_params')|merge({'_locale': 'en'})) }}">EN</a>
-</div>        
-
-	<p>Univ'Nantes © 2014.</p><a href="{{ path('gestion_mairie_homepage',{'theme':'stylesheet.css'}) }}"><font color="black">Thème gris</font> ====</a>
-<a href="{{ path('gestion_mairie_homepage',{'theme':'stylesheet2.css'}) }}"><font color="green">Thème vert</font></a>
-      </footer>
     </div>
+    <div class="row">
+      <div id="menu" class="span3">
+        <h3>{{'Accueil'|trans}}</h3>
+        <ul class="nav nav-pills nav-stacked">
+          <li><a href="{{path('gestion_mairie_homepage')}}">{{'Accueil du Site'|trans}}</a></li>
+          <li><a href="{{path('gestion_mairie_personne')}}">{{'Gerer les personnes'|trans}}</a></li>
+          <li><a href="{{path('gestion_mairie_mariage')}}">{{'Gérer les mariages'|trans}}</a></li>
+          <li><a href="{{path('gestion_mairie_logement')}}">{{'Gérer les logements'|trans}}</a></li>
+          <li><a href="{{path('gestion_mairie_habite')}}">{{'Gérer les em(dé)ménagements'|trans}}</a></li>
+        </ul>
+      </div>
+      <div id="content" class="span8">
 
+        {% block body %}
+
+        {% endblock %}
+        
+      </div>
+    </div>
+    <hr>
+    <footer>
+      <div id="menu" style="text-align:center;">
+        <a href="{{ path(app.request.get('_route'), app.request.get('_route_params')|merge({'_locale': 'fr'})) }}">FR</a>
+        <a href="{{ path(app.request.get('_route'), app.request.get('_route_params')|merge({'_locale': 'en'})) }}">EN</a>
+      </div>        
+      <p>Univ'Nantes © 2014.</p><a href="{{ path('gestion_mairie_homepage',{'theme':'stylesheet.css'}) }}"><font color="black">Thème gris</font> ====</a>
+      <a href="{{ path('gestion_mairie_homepage',{'theme':'stylesheet2.css'}) }}"><font color="green">Thème vert</font></a>
+    </footer>
+  </div>
 </body>
-
 </html>
 
 
