--- a/src/projetIHM/gestionMairieBundle/Resources/views/Habite/modifierLogement.html.twig
+++ b/src/projetIHM/gestionMairieBundle/Resources/views/Habite/modifierLogement.html.twig
@@ -6,42 +6,42 @@
 {% block css %}<link rel="stylesheet" href="{{ asset('bundles/projetihmgestionmairie/css/' ~ app.session.get('theme') ) }}" type="text/css" />
 {% endblock %}
 
+
+
+{% block header%}
+<h1>{{'Modifier un foyer'|trans}}</h1>
+<p>{{'Déstiné aux mairie afin de gerer les personnes.'|trans}}</p>
+{% endblock %}
 {% block body%}
-    <div class="container">
-      <div id="header" class="hero-unit">
-        <h1>{{'Modifier un foyer'|trans}}</h1>
-        <p>{{'Déstiné aux mairie afin de gerer les personnes.'|trans}}</p>
-      </div>
+<div class="row">
+  <div id="menu" class="span3" style="background-color:rgb(238,238,238);padding-left:2%;">
+    <h3>{{'Accueil'|trans}}</h3>
+    <ul class="nav nav-pills nav-stacked">
+      <li><a href="{{path('gestion_mairie_homepage')}}">{{'Accueil du Site'|trans}}</a></li>
+      <li><a href="{{path('gestion_mairie_personne')}}">{{'Gerer les personnes'|trans}}</a></li>
+    </ul>
+    
+    
+  </div>
+  
+  <div id="content" class="span8">
 
-      <div class="row">
-        <div id="menu" class="span3" style="background-color:rgb(238,238,238);padding-left:2%;">
-          <h3>{{'Accueil'|trans}}</h3>
-          <ul class="nav nav-pills nav-stacked">
-            <li><a href="{{path('gestion_mairie_homepage')}}">{{'Accueil du Site'|trans}}</a></li>
-            <li><a href="{{path('gestion_mairie_personne')}}">{{'Gerer les personnes'|trans}}</a></li>
-          </ul>
-          
-          
-        </div>
-      
-	<div id="content" class="span8">
+    <div class="well">
+     <form method="GET" {{ form_enctype(form) }}>
 
-	 <div class="well">
-	    <form method="GET" {{ form_enctype(form) }}>
+       {{form_widget(form)}}
 
-	      {{form_widget(form)}}
+       <input type="submit" class="btn btn-primary" />
+     </form>
+   </div>
 
-	      <input type="submit" class="btn btn-primary" />
-	    </form>
-	  </div>
+ </div>
+</div>
 
-        </div>
-      </div>
+<hr>
 
-      <hr>
-
-      <footer>
-        <p>Univ'Nantes © 2014.</p>
-      </footer>
-    </div>
-    {% endblock %}
+<footer>
+  <p>Univ'Nantes © 2014.</p>
+</footer>
+</div>
+{% endblock %}
