--- a/src/projetIHM/gestionMairieBundle/Resources/views/Logement/logement.html.twig
+++ b/src/projetIHM/gestionMairieBundle/Resources/views/Logement/logement.html.twig
@@ -6,26 +6,17 @@
 {% block css %}<link rel="stylesheet" href="{{ asset('bundles/projetihmgestionmairie/css/' ~ app.session.get('theme') ) }}" type="text/css" />
 {% endblock %}
 
-{% block body%}
-<div class="container">
-  <div id="header" class="hero-unit">
+
+
+{% block header %}
     <h1>{{'Liste des logements'|trans}}</h1>
     <p>{{'Déstiné aux mairie afin de gerer les logements'|trans}}.</p>
-  </div>
+{% endblock %}
 
-  <div class="row">
-    <div id="menu" class="span3">
-      <h3>{{'Accueil'|trans}}</h3>
-      <ul class="nav nav-pills nav-stacked">
-        <li><a href="{{path('gestion_mairie_homepage')}}">{{'Accueil du Site'|trans}}</a></li>
-        <li><a href="{{path('gestion_mairie_ajouterLogement')}}">{{'Ajouter un logement'|trans}}</a></li>
 
-      </ul>
-      
-      
-    </div>
-    
-    <div id="content" class="span8">
+
+
+{% block body%}
       
       {% for logement in logements %}
       <table class="table table-striped">
