--- a/src/projetIHM/gestionMairieBundle/Resources/views/Logement/modifierLogement.html.twig
+++ b/src/projetIHM/gestionMairieBundle/Resources/views/Logement/modifierLogement.html.twig
@@ -7,26 +7,19 @@
 {% block css %}<link rel="stylesheet" href="{{ asset('bundles/projetihmgestionmairie/css/' ~ app.session.get('theme') ) }}" type="text/css" />
 {% endblock %}
 
-{% block body%}
 
-<div class="container">
-  <div id="header" class="hero-unit">
+
+
+{% block header %}
     <h1>{{'Modifier un logement'|trans}}</h1>
     <p>{{'Déstiné aux mairie afin de gerer les logements.'|trans}}</p>
-  </div>
+{% endblock %}
 
-  <div class="row">
-    <div id="menu" class="span3">
-      <h3>{{'Accueil'|trans}}</h3>
-      <ul class="nav nav-pills nav-stacked">
-        <li><a href="{{path('gestion_mairie_homepage')}}">{{'Accueil du Site'|trans}}</a></li>
-        <li><a href="{{path('gestion_mairie_logement')}}">{{'Gerer les logements'|trans}}</a></li>
-      </ul>
-      
-      
-    </div>
-    
-    <div id="content" class="span8">
+
+
+
+{% block body%}
+
 
       <h3>{{'Formulaire de logement'|trans}}</h3>
       <div class="well">
